# NotionSafe

./: .gitattributes  .gitignore  CONTEXT.md  GEMINI.md  README.md  block.py  for_scaffolding.txt  get_blocks.py  id_rsa_gfreak412  id_rsa_gfreak412.pub  post_process.py  preprocess.py  pyproject.toml  requirements-linux.txt  requirements.txt  run.bat  setup.bat  setup.sh
examples/: backup_config.yaml
notebackup/: __main__.py  auth.py  cli.py  config_wizard.py  core.py  exporter.py  exporter.py.bak  fs_layout.py  gitops.py  gui.py  gui_stub.py  logger.py  notion_api.py  scheduler.py  storage.py  task_scheduler.py
notebackup/os_scheduler/: __init__.py  linux.py  windows.py
notebackup/ui/: gtk_config_wizard.py  gtk_ui.py  qt_config_wizard.py  qt_ui.py
notion2md-output/: latest.txt
notion2md-output/2025-11-05_23-01-58/: 2850a912-02c3-80eb-960e-fb49445e6d8f.md  Utility Tools.md
notion2md-output/2025-11-05_23-04-36/: Utility Tools.md
notion2md-output/2025-11-05_23-05-54/: Measurements.md  Utility Tools.md
notion2md-output/2025-11-05_23-09-02/: Utility Tools.md
notion2md-output/2025-11-05_23-13-41/: Measurements.md  Utility Tools.md
notion2md-output/2025-11-05_23-15-43/: Measurements.md  Utility Tools.md
scripts/: backup_runner.py  configure.py  git_commit_update.sh  install_systemd_timer.sh  launch_hidden.py  rsync_copy.sh  run_backup.bat
tests/: test_auth.py  test_cli.py  test_exporter.py  test_fs_layout.py  test_gitops.py  test_logger.py  test_notion_api.py  test_scheduler.py  test_storage.py
