[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notionsafe"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A cross-platform desktop app to backup Notion workspaces locally."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KanishkMishra143/NotionSafe"
"Bug Tracker" = "https://github.com/KanishkMishra143/NotionSafe/issues"

[tool.flake8]
exclude = [
    "venv",
    "examples",
    "notebackup/__pycache__",
]