[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notionsafe"
version = "0.1.0"
description = "A cross-platform desktop app to backup Notion workspaces locally."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Kanishk Mishra", email = "kanishk.kumar412@example.com" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
notionsafe = "notebackup.__main__:main"

[project.optional-dependencies]
gtk = ["PyGObject"]

[project.urls]
Homepage = "https://github.com/KanishkMishra143/NotionSafe"
"Bug Tracker" = "https://github.com/KanishkMishra143/NotionSafe/issues"

[tool.setuptools.packages.find]
# discover any package under the project root named "notebackup" or nested ones
where = ["."]
include = ["notebackup*"]

[tool.flake8]
exclude = [
  "venv",
  "examples",
  "notebackup/__pycache__",
]
